@@ -24,79 +24,82 @@
 package magic.system.hyperion.reader;
 
 import magic.system.hyperion.components.DocumentParameters;
-import magic.system.hyperion.tools.Capabilities;
+import magic.system.hyperion.tools.FileUtils;
 import magic.system.hyperion.tools.MessagesCollector;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
+import java.io.IOException;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 /**
- * Testing of {@link DocumentReader} for Docker related tasks.
+ * Testing of {@link FileCopyTaskReader}.
  *
  * @author Thomas Lehmann
  */
-@DisplayName("Testing DocumentReader class for Docker tasks")
-@SuppressWarnings({"checkstyle:multiplestringliterals", "checkstyle:magicnumber"})
-public class DocumentReaderForDockerTasksTest {
+@DisplayName("Testing of FileCopyTaskReader class")
+@SuppressWarnings("checkstyle:multiplestringliterals")
+public class DocumentReaderForFileCopyTasksTest {
     /**
      * If something takes longer than a minute here this would be a problem.
      */
     private static final int DEFAULT_TIMEOUT_TASKGROUP = 1;
 
     /**
-     * Testing running a Docker container task.
-     *
-     * @throws URISyntaxException when url for document is wrong.
+     * Number of test tasks.
      */
-    @Test
-    public void testDockerContainerTask() throws URISyntaxException {
-        assumeTrue(Capabilities.hasDocker());
+    private static final int NUMBER_OF_TASKS = 4;
 
-        final var path = Paths.get(getClass().getResource(
-                "/documents/document-with-docker-container.yml").toURI());
-        final var reader = new DocumentReader();
-        final var document = reader.read(path);
-        assertNotNull(document, "Document shouldn't be null");
-        assertEquals(1, document.getListOfTaskGroups().size());
-        assertEquals(3, document.getListOfTaskGroups().get(0).getListOfTasks().size());
-        final var tags = document.getListOfTaskGroups().get(0).getListOfTasks().get(2).getTags();
-        assertEquals("tag support", tags.get(0));
-        assertEquals("third example", tags.get(1));
+    @BeforeEach
+    public void setup() throws URISyntaxException, IOException {
+        final URL baseUrl = getClass().getResource("/");
+        final var path = Paths.get(Path.of(baseUrl.toURI()).toString(), "tasks");
+        Files.createDirectories(path);
+    }
 
-        MessagesCollector.clear();
-        document.run(getDefaultDocumentParameters());
-        assertTrue(MessagesCollector.getMessages().contains("set variable default=hello world!"));
-        assertTrue(MessagesCollector.getMessages().contains("set variable test2=this is a demo"));
+    @AfterEach
+    public void cleanUp() throws IOException, URISyntaxException {
+        final URL baseUrl = getClass().getResource("/");
+        final var path = Paths.get(Path.of(baseUrl.toURI()).toString(), "tasks");
+        assertTrue(FileUtils.removeDirectoryRecursive(path));
     }
 
     /**
-     * Testing running a Docker image + container task.
+     * Testing copy file task.
      *
      * @throws URISyntaxException when url for document is wrong.
      */
     @Test
-    public void testDockerImageTask() throws URISyntaxException {
-        assumeTrue(Capabilities.hasDocker());
-
+    public void testFileCopyTask() throws URISyntaxException, IOException {
+        final var testPath = new File(getClass().getResource("/").toURI()).getAbsolutePath();
         final var path = Paths.get(getClass().getResource(
-                "/documents/document-with-docker-image.yml").toURI());
+                "/documents/document-with-copy-file-tasks.yml").toURI());
+
+        final var strContent = Files.readString(path).replace("PATH", testPath);
         final var reader = new DocumentReader();
-        final var document = reader.read(path);
+        final var document = reader.read(strContent.getBytes(StandardCharsets.UTF_8));
         assertNotNull(document, "Document shouldn't be null");
-        assertEquals(1, document.getListOfTaskGroups().size());
-        assertEquals(2, document.getListOfTaskGroups().get(0).getListOfTasks().size());
 
         MessagesCollector.clear();
-        document.run(getDefaultDocumentParameters());
-        assertTrue(MessagesCollector.getMessages().contains("set variable default=hello world!"));
+        assertEquals(0, document.run(getDefaultDocumentParameters()));
+
+        final var lines = MessagesCollector.getMessages().stream()
+                .filter(line -> line.contains("Copying file from")).collect(Collectors.toList());
+        assertEquals(NUMBER_OF_TASKS, lines.size());
     }
 
     /**
